--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,10 @@ a {
 a:hover {
   text-decoration: underline;
 }
+.current:first-letter {
+  text-transform: capitalize;
+}
+
 .weather-app {
   margin: 0 auto;
   margin-top: 100px;
